syntax = "proto3";

option csharp_namespace = "MiniProject2.Factory.Protos";

package book;

import "google/protobuf/wrappers.proto";

service BookProto {
    rpc ISBN13Validator (google.protobuf.StringValue) returns (google.protobuf.BoolValue);
    rpc ISBN10Validator (google.protobuf.StringValue) returns (google.protobuf.BoolValue);
}